# py-dataengineering-workshop

./: .gitignore  README.md  WORKSHOP_GUIDE.md  air_app.py  app.py  pyproject.toml  requirements.txt  view_data.py
.devcontainer/: Dockerfile  devcontainer.json
data/01-clean/: customers.parquet  order_details.parquet  orders.parquet  products.parquet
data/01-clean/_dq/: dq_issues.parquet  dq_runs.parquet
data/02-model/: dim_customer.parquet  fact_sales.parquet  sales_by_country.parquet  sales_by_customer.parquet  sales_by_product.parquet
etl/: build.py  dq.py  extract.py  load.py  paths.py  run.py  transform.py
